# client

./: CMakeLists.txt  MainContent.qml  ProfileButton.qml  README.md  RequestDealsContent.qml  UserRequestsContent.qml  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
lib/: clientcontroller.cpp  clientcontroller.h  deal.h  filters.h  request.h  userdata.cpp  userdata.h
libs/: deal.cpp  deallistmodel.cpp  deallistmodel.h  filters.cpp  request.cpp  requestlistmodel.cpp  requestlistmodel.h
test/: CMakeLists.txt  testdeal.cpp  testdeal.h  testdeallistmodel.cpp  testdeallistmodel.h  testrequest.cpp  testrequest.h  testrequestlistmodel.cpp  testuserdata.cpp
tests/: CMakeLists.txt  main.cpp  testdeal.cpp  testdeallistmodel.cpp  testrequest.cpp  testrequestlistmodel.cpp  testrequestlistmodel.h  testuserdata.cpp  testuserdata.h
